# xinge-backend

./: .dockerignore  .env  .env.example  .gitignore  .vercelignore  Dockerfile  Dockerfile.bak  README.md  container.config.json  environment.yml  pyproject.toml  requirements.txt  setup.py  swagger.yaml  vercel.json
app/: main.py
app/api/: deps.py  middleware.py
app/core/: auth_tokens.py  config.py  errors.py  logging.py  response.py  security.py
app/db/: session.py
app/integrations/: wechat_auth.py  wechat_pay.py
app/repositories/: distributor_repository.py  message_repository.py  order_repository.py  payment_callback_repository.py  product_config_repository.py  report_repository.py  school_repository.py  user_repository.py
app/services/: admin_user_service.py  auth_service.py  bootstrap_service.py  distributor_service.py  message_service.py  order_service.py  payment_notify_service.py  product_config_service.py  report_service.py  school_service.py
certs/: apiclient_key.pem  wechatpay_platform.pem
docs/: withdrawal-spec.md
docs/plans/: 2026-04-23-wechat-cloud-hosting-deploy.md  2026-04-23-wechat-mini-program-api-implementation-plan.md  (+1 more)
migrations/: env.py  script.py.mako
scripts/: curl-demo.env  curl-demo.sh  run_api.sh
static/: admin-dashboard.html  admin-distributor-management.html  admin-distributor.html  admin-downline-assignment.html  admin-operation-balance.html  admin-quota-allocation.html  admin-users.html  admin-withdrawal-debug.html  admin-withdrawals.html  report-preview.html
tests/: conftest.py
tests/fixtures/: app.py  db.py  (+1 more)
(+72 files in other folders)
