[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xinge-backend"
version = "0.1.0"
description = "WeChat mini program backend for xinge"
requires-python = ">=3.9"
dependencies = [
  "fastapi>=0.111.0,<1.0.0",
  "uvicorn[standard]>=0.30.0,<1.0.0",
  "pydantic>=2.7.0,<3.0.0",
  "sqlalchemy>=2.0.30,<3.0.0",
  "alembic>=1.13.1,<2.0.0",
  "cryptography>=42.0.0,<43.0.0",
  "pymysql>=1.1.1,<2.0.0",
  "requests>=2.32.0,<3.0.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.0,<9.0.0",
  "httpx>=0.27.0,<1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
